# ambientweather2sqlite

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pyrefly.toml  requirements-dev.txt
.claude/: settings.local.json
.github/workflows/: lint.yml  publish.yml
ambientweather2sqlite/: __main__.py  awparser.py  configuration.py  daemon.py  database.py  exceptions.py  fetcher.py  forecast.py  launchd.py  metadata.py  models.py  mureq.py  scanner.py  server.py  units_mapping.py
tests/: test_awparser.py  test_awparser_hypothesis.py  test_configuration.py  test_configuration_wizard.py  test_daemon.py  test_daemon_integration.py  test_database_manager.py  test_database_timezone.py  test_forecast.py  test_health_metrics.py  test_launchd.py  test_main.py  test_metadata.py  test_scanner.py  test_server.py
