[project]
name = "ambientweather2sqlite"
version = "0.7.0"
description = "A project to record weather observations from an AmbientWeather station over the local network - no API needed!"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
dependencies = []
authors = [
    { name = "Harold Martin", email = "Harold.Martin@gmail.com" },
]
keywords = ["ambientweather", "ambient", "sqlite", "weather", "weather-station", "datasette", "iot", "home-automation", "climate", "temperature", "humidity", "barometer", "sensor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Datasette",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/harold-martin/ambientweather2sqlite"
Repository = "https://github.com/harold-martin/ambientweather2sqlite"
Issues = "https://github.com/harold-martin/ambientweather2sqlite/issues"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project.scripts]
ambientweather2sqlite = "ambientweather2sqlite.__main__:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "codecov>=2.1.13",
    "pyrefly>=0.24.2",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.4",
    "ty>=0.0.1a10",
]

[tool.coverage.run]
relative_files = true

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

# Same as Black.
line-length = 88
indent-width = 4
target-version = "py314"

lint.select = ["ALL"]
lint.ignore = ["ANN204", "D100", "D101", "D103", "D104", "D107", "D203", "D205", "D213", "D401", "DTZ005", "EM101", "T201"]

[tool.ruff.lint.per-file-ignores]
"ambientweather2sqlite/awparser.py" = ["ANN001", "ANN201", "D102", "ERA001", "SIM102"]
"ambientweather2sqlite/configuration.py" = ["E501"]
"ambientweather2sqlite/database.py" = ["S608", "SIM118"]
"ambientweather2sqlite/mureq.py" = ["ANN003", "D105", "D203", "D205", "D213", "D401", "EM101", "ERA001", "FIX003", "TD001", "TD002", "TRY003"]
"ambientweather2sqlite/server.py" = ["ANN002", "ANN003", "ANN201", "ANN202", "D102", "G004", "N802", "TRY003"]
"tests/*.py" = ["ANN001", "ANN201", "D102", "D400", "D415", "E501", "PLC0415", "PT009", "PT027", "SIM115", "TRY003"]

[tool.ruff.format]
# Same as Black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools]
packages = ["ambientweather2sqlite"]
